--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   </head>
   <body>
     <!--================== navbar start================== -->
-    <nav>
+    <nav id="navbar">
       <div class="flex-container">
         <img src="image/logo.png" alt="" />
         <ul>
-          <li class="flex-iteam"><a href="#background">Home</a></li>
+          <li class="flex-iteam"><a href="#navbar">Home</a></li>
           <li class="flex-iteam"><a href="#feature1">Features</a></li>
           <li class="flex-iteam"><a href="#service">Services</a></li>
           <li class="flex-iteam">
