--- a/index.html
+++ b/index.html
@@ -16,30 +16,32 @@
   </head>
   <body>
     <!--================== navbar start================== -->
-    <nav id="navbar">
-      <div class="flex-container">
-        <img src="image/logo.png" alt="" />
-        <ul>
-          <li class="flex-iteam"><a href="#navbar">Home</a></li>
-          <li class="flex-iteam"><a href="#feature1">Features</a></li>
-          <li class="flex-iteam"><a href="#service">Services</a></li>
-          <li class="flex-iteam">
-            <a href="#testimonial-section">Testimonials</a>
-          </li>
-          <li class="flex-iteam"><a href="#footer-section">Contact us</a></li>
-        </ul>
-      </div>
-    </nav>
-    <!-- =================navbar end========================= -->
+    <div id="home">
+      <nav id="navbar">
+        <div class="flex-container">
+          <a href="#home"> <img src="image/logo.png" alt="" /></a>
+          <ul>
+            <li class="flex-iteam"><a href="#home">Home</a></li>
+            <li class="flex-iteam"><a href="#feature1">Features</a></li>
+            <li class="flex-iteam"><a href="#service">Services</a></li>
+            <li class="flex-iteam">
+              <a href="#testimonial-section">Testimonials</a>
+            </li>
+            <li class="flex-iteam"><a href="#footer-section">Contact us</a></li>
+          </ul>
+        </div>
+      </nav>
+      <!-- =================navbar end========================= -->
 
-    <!-- ===============background image part start============= -->
-    <div id="background">
-      <div id="content">
-        <h1>Hair style</h1>
-        <p>Style your hair is style your life</p>
-        <div class="banner-btn">
-          <a href=""><span></span>Find out </a>
-          <a href=""><span></span>Read more </a>
+      <!-- ===============background image part start============= -->
+      <div id="background">
+        <div id="content">
+          <h1>Hair style</h1>
+          <p>Style your hair is style your life</p>
+          <div class="banner-btn">
+            <a href=""><span></span>Find out </a>
+            <a href=""><span></span>Read more </a>
+          </div>
         </div>
       </div>
     </div>
