--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
       <!-- =================navbar end========================= -->
 
-      <!-- ===============background image part start============= -->
+      <!-- ===============background image part start============ -->
       <div id="background">
         <div id="content">
           <h1>Hair style</h1>
